--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "gulp-rename": "^1.2.3",
     "gulp-sass": "^4.0.1",
     "gulp-uglifyjs": "^0.6.2",
-    "imagemin-pngquant": "^5.1.0",
-    "jquery": "^3.3.1"
+    "imagemin-pngquant": "^5.1.0"
   }
 }
